--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -25,37 +25,37 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vzw-yG-WVG">
                                             <rect key="frame" x="0.0" y="0.0" width="164" height="149"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="164" id="WoB-Vf-MeH"/>
+                                                <constraint firstAttribute="width" constant="164" id="4o8-ND-T9v"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="musicVideoTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCI-UF-jUJ">
+                                            <rect key="frame" x="172" y="29" width="420" height="120"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJN-GN-Wh2">
-                                            <rect key="frame" x="172" y="8" width="34" height="21"/>
+                                            <rect key="frame" x="172" y="0.0" width="56" height="31"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="6PJ-BN-cxE"/>
-                                                <constraint firstAttribute="width" constant="34" id="HjY-Yb-v1Q"/>
+                                                <constraint firstAttribute="width" constant="56" id="Gti-5N-NvQ"/>
+                                                <constraint firstAttribute="height" constant="31" id="ycZ-aZ-zMw"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="musicVideoTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCI-UF-jUJ">
-                                            <rect key="frame" x="172" y="21" width="420" height="120"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="trailing" secondItem="hiN-o4-nTx" secondAttribute="trailingMargin" id="BPB-uA-d7C"/>
-                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="bottom" secondItem="hiN-o4-nTx" secondAttribute="bottomMargin" id="KyP-VU-yxh"/>
-                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="top" id="Q6T-JS-Jk2"/>
-                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="RCI-UF-jUJ" secondAttribute="leading" id="TIq-JG-hhS"/>
-                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="topMargin" constant="13" id="aEF-Ui-dpU"/>
-                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="topMargin" id="bnf-SZ-h5o"/>
-                                        <constraint firstAttribute="bottom" secondItem="Vzw-yG-WVG" secondAttribute="bottom" id="sPi-VP-wmB"/>
-                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="Vzw-yG-WVG" secondAttribute="trailing" constant="8" symbolic="YES" id="sg0-gY-ZDx"/>
-                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="leading" secondItem="hiN-o4-nTx" secondAttribute="leading" id="x9f-eg-bDW"/>
+                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="Vzw-yG-WVG" secondAttribute="trailing" constant="8" symbolic="YES" id="A3I-SL-8ej"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="top" id="LJd-ee-g1u"/>
+                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="trailing" secondItem="hiN-o4-nTx" secondAttribute="trailingMargin" id="LWd-aj-Kmb"/>
+                                        <constraint firstAttribute="bottom" secondItem="Vzw-yG-WVG" secondAttribute="bottom" id="TnA-DR-9xr"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="bottom" secondItem="RCI-UF-jUJ" secondAttribute="bottom" id="aaY-M1-6Qx"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="top" secondItem="SJN-GN-Wh2" secondAttribute="top" id="eOX-KV-KgV"/>
+                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="topMargin" constant="21" id="gcN-yh-4IB"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="leading" secondItem="hiN-o4-nTx" secondAttribute="leading" id="ivo-rJ-Mj6"/>
+                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="RCI-UF-jUJ" secondAttribute="leading" id="yaE-1q-g1f"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
