--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -93,10 +93,10 @@
                                 <rect key="frame" x="1" y="132" width="599" height="374"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMk-U7-irO">
-                                <rect key="frame" x="7" y="64" width="586" height="20"/>
+                                <rect key="frame" x="7" y="64" width="593" height="69"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="69" id="90y-LY-XcZ"/>
+                                    <constraint firstAttribute="height" constant="69" id="m32-OB-JRW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -106,32 +106,20 @@
                                 <rect key="frame" x="20" y="507" width="209" height="21"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="209" id="7Gx-E4-sIl"/>
+                                    <constraint firstAttribute="width" constant="209" id="lxi-ag-1cQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="7Gx-E4-sIl"/>
-                                    </mask>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBY-Rn-CEp">
                                 <rect key="frame" x="536" y="508" width="43" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="X2b-dm-pP1"/>
-                                    <constraint firstAttribute="width" constant="76" id="cdo-CU-NGB"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rights" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPF-Hj-p5z">
                                 <rect key="frame" x="1" y="536" width="599" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="98" id="eoL-wQ-gA9"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -139,32 +127,32 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kMk-U7-irO" firstAttribute="centerX" secondItem="OKX-ST-ahf" secondAttribute="centerX" id="1tg-fs-H2f"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="IBY-Rn-CEp" secondAttribute="trailing" constant="1" id="3bG-s3-y9x"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="trailing" secondItem="RPF-Hj-p5z" secondAttribute="trailing" id="73V-3O-eTg"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="centerX" secondItem="HcA-VA-biO" secondAttribute="centerX" id="A6A-es-RTb"/>
-                            <constraint firstItem="RPF-Hj-p5z" firstAttribute="top" secondItem="pmb-mI-eVu" secondAttribute="bottom" constant="8" symbolic="YES" id="BxI-KV-nyY"/>
-                            <constraint firstItem="kMk-U7-irO" firstAttribute="leading" secondItem="HcA-VA-biO" secondAttribute="leadingMargin" constant="-13" id="Cyb-5m-O2N"/>
-                            <constraint firstItem="kMk-U7-irO" firstAttribute="top" secondItem="hbX-ii-LkG" secondAttribute="bottom" id="Go0-8l-mur"/>
-                            <constraint firstItem="pmb-mI-eVu" firstAttribute="baseline" secondItem="IBY-Rn-CEp" secondAttribute="baseline" id="Go3-oS-THe"/>
-                            <constraint firstAttribute="trailing" secondItem="OKX-ST-ahf" secondAttribute="trailing" id="QdQ-Lj-9WT"/>
-                            <constraint firstItem="RPF-Hj-p5z" firstAttribute="bottom" secondItem="92b-zt-TXa" secondAttribute="top" id="X3Z-bw-Jvr"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="top" secondItem="kMk-U7-irO" secondAttribute="bottom" constant="48" id="XyY-nd-ZtN"/>
-                            <constraint firstItem="pmb-mI-eVu" firstAttribute="leading" secondItem="HcA-VA-biO" secondAttribute="leadingMargin" id="Yel-ul-q5D"/>
-                            <constraint firstAttribute="trailing" secondItem="OKX-ST-ahf" secondAttribute="trailing" id="f0B-eP-iVO"/>
-                            <constraint firstItem="kMk-U7-irO" firstAttribute="centerX" secondItem="HcA-VA-biO" secondAttribute="centerX" id="gX2-9e-0yQ"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="top" secondItem="hbX-ii-LkG" secondAttribute="bottom" id="jan-tK-bec"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="leading" secondItem="RPF-Hj-p5z" secondAttribute="leading" id="p7b-Qt-28Y"/>
-                            <constraint firstItem="pmb-mI-eVu" firstAttribute="top" secondItem="OKX-ST-ahf" secondAttribute="bottom" constant="1" id="pa7-hR-adf"/>
-                            <constraint firstItem="OKX-ST-ahf" firstAttribute="bottom" secondItem="92b-zt-TXa" secondAttribute="top" id="s36-p7-5bj"/>
-                            <constraint firstItem="pmb-mI-eVu" firstAttribute="centerY" secondItem="IBY-Rn-CEp" secondAttribute="centerY" id="tpL-IL-zi2"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="centerX" secondItem="HcA-VA-biO" secondAttribute="centerX" id="2bU-lc-Qp4"/>
+                            <constraint firstItem="RPF-Hj-p5z" firstAttribute="bottom" secondItem="92b-zt-TXa" secondAttribute="top" id="2cZ-3X-m0Y"/>
+                            <constraint firstAttribute="trailing" secondItem="OKX-ST-ahf" secondAttribute="trailing" id="D1l-hf-qZO"/>
+                            <constraint firstItem="kMk-U7-irO" firstAttribute="trailing" secondItem="OKX-ST-ahf" secondAttribute="trailing" id="Irn-qG-A7Z"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="trailing" secondItem="RPF-Hj-p5z" secondAttribute="trailing" id="OR4-91-yTv"/>
+                            <constraint firstAttribute="trailing" secondItem="kMk-U7-irO" secondAttribute="trailing" id="QJF-Lg-bTs"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="top" secondItem="hbX-ii-LkG" secondAttribute="bottom" constant="68" id="RRE-T4-01A"/>
+                            <constraint firstItem="RPF-Hj-p5z" firstAttribute="top" secondItem="pmb-mI-eVu" secondAttribute="bottom" constant="8" symbolic="YES" id="XOT-li-xjj"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="top" secondItem="hbX-ii-LkG" secondAttribute="bottom" id="YTe-yP-3cz"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="leading" secondItem="HcA-VA-biO" secondAttribute="leading" id="cPO-ob-sDV"/>
+                            <constraint firstItem="kMk-U7-irO" firstAttribute="leading" secondItem="HcA-VA-biO" secondAttribute="leadingMargin" constant="-13" id="gUw-bz-EkK"/>
+                            <constraint firstItem="pmb-mI-eVu" firstAttribute="centerY" secondItem="IBY-Rn-CEp" secondAttribute="centerY" id="iky-uV-pjL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IBY-Rn-CEp" secondAttribute="trailing" constant="1" id="jOl-fW-tWP"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="leading" secondItem="RPF-Hj-p5z" secondAttribute="leading" id="jtU-iC-7b4"/>
+                            <constraint firstItem="pmb-mI-eVu" firstAttribute="leading" secondItem="HcA-VA-biO" secondAttribute="leadingMargin" id="jyU-HD-fsg"/>
+                            <constraint firstItem="kMk-U7-irO" firstAttribute="top" secondItem="hbX-ii-LkG" secondAttribute="bottom" id="lZx-sX-YUT"/>
+                            <constraint firstItem="OKX-ST-ahf" firstAttribute="bottom" secondItem="92b-zt-TXa" secondAttribute="top" id="tZa-6z-V7H"/>
+                            <constraint firstItem="pmb-mI-eVu" firstAttribute="top" secondItem="OKX-ST-ahf" secondAttribute="bottom" constant="1" id="uqk-79-kf6"/>
+                            <constraint firstItem="pmb-mI-eVu" firstAttribute="baseline" secondItem="IBY-Rn-CEp" secondAttribute="baseline" id="znj-2f-Vy3"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="A6A-es-RTb"/>
-                                <exclude reference="QdQ-Lj-9WT"/>
-                                <exclude reference="jan-tK-bec"/>
-                                <exclude reference="s36-p7-5bj"/>
+                                <exclude reference="D1l-hf-qZO"/>
+                                <exclude reference="YTe-yP-3cz"/>
+                                <exclude reference="cPO-ob-sDV"/>
+                                <exclude reference="tZa-6z-V7H"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
@@ -175,25 +163,23 @@
                                 <exclude reference="RPF-Hj-p5z"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="1tg-fs-H2f"/>
-                                <exclude reference="Cyb-5m-O2N"/>
-                                <exclude reference="Go0-8l-mur"/>
-                                <exclude reference="gX2-9e-0yQ"/>
-                                <exclude reference="Go3-oS-THe"/>
-                                <exclude reference="Yel-ul-q5D"/>
-                                <exclude reference="pa7-hR-adf"/>
-                                <exclude reference="tpL-IL-zi2"/>
-                                <exclude reference="BxI-KV-nyY"/>
-                                <exclude reference="X3Z-bw-Jvr"/>
-                                <exclude reference="3bG-s3-y9x"/>
-                                <exclude reference="73V-3O-eTg"/>
-                                <include reference="A6A-es-RTb"/>
-                                <include reference="QdQ-Lj-9WT"/>
-                                <exclude reference="XyY-nd-ZtN"/>
-                                <exclude reference="f0B-eP-iVO"/>
-                                <include reference="jan-tK-bec"/>
-                                <exclude reference="p7b-Qt-28Y"/>
-                                <include reference="s36-p7-5bj"/>
+                                <exclude reference="Irn-qG-A7Z"/>
+                                <exclude reference="QJF-Lg-bTs"/>
+                                <exclude reference="gUw-bz-EkK"/>
+                                <exclude reference="lZx-sX-YUT"/>
+                                <exclude reference="iky-uV-pjL"/>
+                                <exclude reference="jyU-HD-fsg"/>
+                                <exclude reference="uqk-79-kf6"/>
+                                <exclude reference="znj-2f-Vy3"/>
+                                <exclude reference="2cZ-3X-m0Y"/>
+                                <exclude reference="XOT-li-xjj"/>
+                                <exclude reference="jOl-fW-tWP"/>
+                                <exclude reference="2bU-lc-Qp4"/>
+                                <include reference="D1l-hf-qZO"/>
+                                <exclude reference="RRE-T4-01A"/>
+                                <include reference="YTe-yP-3cz"/>
+                                <include reference="cPO-ob-sDV"/>
+                                <include reference="tZa-6z-V7H"/>
                             </mask>
                         </variation>
                     </view>
